venkat is updated final pom.xml